New version, 3.2. Based on cleaned up DSDO word list. Added some new words. Aligned GPL versions between aspell-da and DSDO to GPLv2. Modified some copyright information. Adjusted da.dat. Removed compiled and compressed versions of word list. Now include only the raw word list.

--- a/Makefile.pre
+++ b/Makefile.pre
@@ -23,7 +23,7 @@ install: all
 	cd ${DESTDIR}${datadir}/ && chmod 644 ${data_files}
 
 clean:
-	rm -f ${rws_files}
+	rm -f ${rws_files} ${cwl_files}
 
 distclean: clean
 	rm -f Makefile
